Fix alignment issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,15 +26,14 @@ body {
   margin: 0;
   background-image: url('./assets/kova-web-bkg.svg');
   width: calc(100vw - 2em);
-  height: 100vh;
+  // height: 100vh;
+  width: 100vw;
   color: v.$yellow-1;
   font-family: 'Xolonium', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-
 }
 
 main {
